# mercati-energetici

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
LICENSE/: index.html
docs/: getting_started.md  index.md  installation.md
docs/reference/: mercati_ambientali.md  mercati_elettrici.md  mercati_energetici.md  mercati_gas.md  mgp.md
examples/: get_daily_pun.py
getting_started/: index.html
installation/: index.html
mercati_energetici/: __init__.py  electricity_markets.py  energy_markets.py  environmental_markets.py  exceptions.py  gas_markets.py
reference/mercati_ambientali/: index.html
reference/mercati_elettrici/: index.html
reference/mercati_energetici/: index.html
reference/mercati_gas/: index.html
reference/mgp/: index.html
search/: search_index.json
tests/: manual_test.py  test.py  test_electricy_markets.py  test_energy_markets.py  test_environmental_markets.py  test_gas_markets.py
